--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
   <title> Jeunbug Comix </title>
   <meta name = "Brandon Jeune, Joshua May" content="width=device-width, initial-scale=1">
   <link rel  = "stylesheet" href ="css/styles.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-    <a href="https://www.instagram.com/jeunebugcomix/"><button title="avatar"><img src="img/avatar.PNG"></button></a>
+    <a id="profile_pic" href="https://www.instagram.com/jeunebugcomix/"><button title="avatar"><img src="img/avatar.PNG"></button></a>
     <h2>Here's a placemaker where a writer makes a living.</h2>
 
     <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><button title="Risque much?"><img src="img/cupid.PNG"></button></a>
