--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
   <link rel  = "stylesheet" href ="css/styles.css">
 </head>
 <body>
-    <a id="profile_pic" href="https://www.instagram.com/jeunebugcomix/"><button title="avatar"><img src="img/avatar.PNG"></button></a>
+    <a href="https://www.instagram.com/jeunebugcomix/"><img src="img/avatar.PNG"></button></a>
     <h2>Here's a placemaker where a writer makes a living.</h2>
 
-    <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><button title="Risque much?"><img src="img/cupid.PNG"></button></a>
+    <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><img src="img/cupid.PNG"></button></a>
     <h2>Here's where a developer shares their progress</h2>
 
     <a href ="https://www.instagram.com/p/BsiFe3uAO2l/"><img src="img/dcdinos.PNG"></a>
     <h2>Here's where you can build a web presence that crosses all networks favorably</h2>
 
-    <a href ="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline.PNG"></a>
+    <a id="hairline" href ="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline.PNG"></a>
     <h2>Apply Metcalfe's law by creating the same entity accross different networks</h2>
 
     <a href ="https://www.instagram.com/p/B3f6cL8Ar5A/"><img src="img/inktober19.PNG"></a>
     <h2>Add more where it makes sense, and reveal more if you can or want to</h2>
 
-    <a href ="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst0.PNG"></a>
+    <a id="inst" href ="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst0.PNG"></a>
     <h2>Treat your content like an illuminated manuscript</h2>
 
     <a href ="https://www.instagram.com/p/B4TQ1-vgPch/"><img src="img/werewolves_london.PNG"></a>
