Moved headers, added images

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title> Jeunebug Comix </title>
   <meta name = "Brandon Jeune, Joshua May" content="width=device-width, initial-scale=1">
   <link rel  = "stylesheet" href ="css/styles.css">
+  <script src="js/script.js"></script>
 </head>
 <body>
   <header>
@@ -13,59 +14,71 @@
     <h2>When life hands you low-hanging fruit, doodle it</h2>
   </header>
 
-  <a href ="https://www.instagram.com/p/B4TQ1-vgPch/"><img src="img/werewolves_london.PNG"></a>
   <button class="collapse">American Werewolves in London...</button>
     <div class="descriptions">
-      <p>Managed to get in one more #inktober before the end of the month. Happy Halloween! #comics 
+      <p>Managed to get in one more #inktober before the end of the month. Happy Halloween! #comics
           #drawing #inking #illustration #art #halloween #horror #werewolf</p>
     </div>
-    
-  <a href ="https://www.instagram.com/p/B3f6cL8Ar5A/"><img src="img/inktober19.PNG"></a>
+  </div>
+  <a href ="https://www.instagram.com/p/B4TQ1-vgPch/"><img src="img/werewolves_london.PNG"></a>
+
   <button class="collapse">Inktober Drawing...</button>
   <div class="descriptions">
-      <p>Twelve days into October and I’m only just completing my first #inktober drawing, 
-        but here’s to another attempt at setting aside time for art in between lesson planning 
-        and replaying most of the Resident Evil games late into the night #creaturedesign 
+      <p>Twelve days into October and I’m only just completing my first #inktober drawing,
+        but here’s to another attempt at setting aside time for art in between lesson planning
+        and replaying most of the Resident Evil games late into the night #creaturedesign
         #illustration #art #drawing #inking #monsters</p>
   </div>
+  <a href ="https://www.instagram.com/p/B3f6cL8Ar5A/"><img src="img/inktober19.PNG"></a>
+  
 
-  <a id="hairline" href ="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline.PNG"></a>
+  <a class="hairline" href ="https://www.instagram.com/p/BzCSozlAXtq/"></a>
   <button class="collapse">Lorax Redux...</button>
   <div class="descriptions">
-      <p>“Unless someone invents hair plugs that don’t cost such a lot, the hairline’s not going to get 
-        better. It’s not.” Was reading The Lorax with my students last week and decided to turn my 
-        subsequent rumination into a comic. Not sure what it says about me that said rumination 
-        ignored the story’s easy connection to climate change and instead found a way to focus on my 
+      <p>“Unless someone invents hair plugs that don’t cost such a lot, the hairline’s not going to get
+        better. It’s not.” Was reading The Lorax with my students last week and decided to turn my
+        subsequent rumination into a comic. Not sure what it says about me that said rumination
+        ignored the story’s easy connection to climate change and instead found a way to focus on my
         own personal aging and angst. #comics #illustration #art #humor #drseuss #thelorax</p>
   </div>
+  <div class="scrolling-wrapper">
+      <div class="card"><a href="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline1.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline2.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline3.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline4.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BzCSozlAXtq/"><img src="img/hairline5.PNG"></a></div>
+    </div>
 
-  <a id="inst" href ="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst0.PNG"></a>
+  
+
   <button class="collapse">Instructional Materials...</button>
   <div class="descriptions">
-      <p>As a teacher, much of my creative energy goes into making instructional materials, 
-        so if you ever find yourself wondering why you don’t see comics from me more often, 
+      <p>As a teacher, much of my creative energy goes into making instructional materials,
+        so if you ever find yourself wondering why you don’t see comics from me more often,
         it’s because you’re not one of my second graders. #doraemon #comics #art #illustration #manga #teaching</p>
   </div>
-
+  <div class="scrolling-wrapper">
+      <div class="card"><a href="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst1.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst2.PNG"></a></div>
+      <div class="card"><a href="https://www.instagram.com/p/BuuaFhqB3av/"><img src="img/inst3.PNG"></a></div>
+    </div>
   
-  <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><img src="img/cupid.PNG"></button></a>
+
   <button class="collapse">Cupid...</button>
   <div class="descriptions">
-      <p>Considered emphasizing this comic was made “by hand,” but decided that was beneath 
+      <p>Considered emphasizing this comic was made “by hand,” but decided that was beneath
         even me #happyvalentinesday #comics #art #illustration #humor</p>
   </div>
+  <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><img src="img/cupid.PNG"></button></a>
 
-  <a href ="https://www.instagram.com/p/BsiFe3uAO2l/"><img src="img/dcdinos.PNG"></a>
-  <button class="collapse">DC Dinos</button>
+  <button class="collapse">Cover</button>
   <div class="descriptions">
-      <p>I wouldn’t say I’ve stolen anyone’s thunder with this (as I didn’t specifically 
-        mention #thor (woops)) as much as taken a harmless ride on someone’s cloaktales, 
-        but, as they always say, “cape diem” (try and seize a little of that sweet, sweet 
+      <p>I wouldn’t say I’ve stolen anyone’s thunder with this (as I didn’t specifically
+        mention #thor (woops)) as much as taken a harmless ride on someone’s cloaktales,
+        but, as they always say, “cape diem” (try and seize a little of that sweet, sweet
         superhero trending capital). #comic #art #drawing #marvel #dc #dinosaurs</p>
   </div>
-
-
-  
+  <a href ="https://www.instagram.com/p/BsiFe3uAO2l/"><img src="img/dcdinos.PNG"></a>
 
 </body>
 <script>
