--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,28 @@
   </div>
   <a href ="https://www.instagram.com/p/Bt3huOyBAfQ/"><img src="img/cupid.PNG"></button></a>
 
+  <button class="collapse">Bipolar...</button>
+  <div class="descriptions">
+      <p>This week’s comic is a fun reminder that no matter how cold of a winter you’re 
+        currently having, it can always get a little bit colder. #dumbpuns #drawing #comics #art #puns #polarbears</p>
+  </div>
+  <a href ="https://www.instagram.com/p/BtHnAYwFZpW/"><img src="img/bear.PNG"></button></a>
+
+  <button class="collapse">For a good time...</button>
+  <div class="descriptions">
+      <p>For a good time, call</p>
+      <p>#comic #art #drawing #badjokes #toilethumor</p>
+  </div>
+  <a href ="https://www.instagram.com/p/BsiJ6kwAHTl/"><img src="img/good_time.PNG"></button></a>
+
+  <button class="collapse">Tour God...</button>
+  <div class="descriptions">
+      <p>My second published comic (we don’t talk about the first one) from VCU’s Comicality mag, 
+        way back in 2011. Sorta posting for posterity, but mostly because I don’t have enough current 
+        comics to justify a comic-devoted Instagram account without it #comic #art #drawing #puns #god</p>
+  </div>
+  <a href ="https://www.instagram.com/p/BsiGTheAAdd/"><img src="img/tour_god.PNG"></button></a>
+
   <button class="collapse">Cover</button>
   <div class="descriptions">
       <p>I wouldn’t say I’ve stolen anyone’s thunder with this (as I didn’t specifically
