Added image for animation

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <a href="https://www.instagram.com/jeunebugcomix/"><img src="img/avatar.PNG"></button></a>
     <h2>When life hands you low-hanging fruit, doodle it</h2>
   </header>
-
+  <div id = "centaur" class = "float">
+    <img src = "img/flipper.png" title = "roar" height="375">
+  </div>
   <button class="collapse">American Werewolves in London...</button>
     <div class="descriptions">
       <p>Managed to get in one more #inktober before the end of the month. Happy Halloween! #comics
@@ -30,6 +32,7 @@
         #illustration #art #drawing #inking #monsters</p>
   </div>
   <a href ="https://www.instagram.com/p/B3f6cL8Ar5A/"><img src="img/inktober19.PNG"></a>
+
 
 
   <a class="hairline" href ="https://www.instagram.com/p/BzCSozlAXtq/"></a>
