--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <h2>When life hands you low-hanging fruit, doodle it</h2>
   </header>
   <div id = "centaur" class = "float">
-    <img src = "img/flipper.png" title = "roar" height="375">
+    <img src = "img/flipper.PNG" title = "roar" height="375">
   </div>
   <button class="collapse">American Werewolves in London...</button>
     <div class="descriptions">
